--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@ function renderItem(feature, extended=false, verbose=false) {
   }
 
   if (o.faction) {
-    let faction = lang[`sid_misc_faction_${o.faction.toLowerCase()}`] || o.faction;
+    let faction = lang[`sid_misc_answer_faction_${o.faction}`] || lang[`sid_misc_faction_${o.faction.toLowerCase()}`] || o.faction;
     if (faction) {
       info.category = info.category + ' / ' + faction;
     }
