--- a/js/lib/search-control/index.html
+++ b/js/lib/search-control/index.html
@@ -3,6 +3,10 @@
 <link rel="stylesheet" href="search-control.css" />
 <script src="search-control.js"></script>
 
+<style>
+body { background-color: #aaa; }
+</style>
+
 <script>
 
 window.onload = function(event) {
