--- a/index.html
+++ b/index.html
@@ -1127,7 +1127,7 @@ function popupOnClick(e) {
   */
 
   if (o.keycode) {
-    content += `<hr/>Keycode: ${o.keycode}`;
+    content += `<hr/>${o.keycode}`;
   }
 
   if (info.photo) {
@@ -1271,7 +1271,7 @@ function showTooltip(e) {
   }
 
   if (o.keycode) {
-    content += `<hr/>Keycode: ${o.keycode}`;
+    content += `<hr/>${o.keycode}`;
   }
 
   if (o.items) {
