--- a/js/lib/search-control/index.html
+++ b/js/lib/search-control/index.html
@@ -4,7 +4,7 @@
 <script src="search-control.js"></script>
 
 <style>
-body { background-color: #aaa; }
+body { background-color: #fff; }
 </style>
 
 <script>
