--- a/index.html
+++ b/index.html
@@ -1060,14 +1060,6 @@ function popupOnClick(e) {
   div.replaceChildren();
   div.classList.remove('collapsed');
 
-  if (info.icon) {
-    let hr = document.createElement('hr');
-    let content = document.createElement('div');
-    content.innerHTML = `<img src="${info.icon}" style="max-width: 320px;">`;
-    div.appendChild(hr);
-    div.appendChild(content);
-  }
-
   if (info.description) {
     let hr = document.createElement('hr');
     let content = document.createElement('div');
@@ -1153,6 +1145,13 @@ function popupOnClick(e) {
     return div;
   }
 
+  if (o.type=='ESpawnType::Item' && o.name) {
+    let container = document.createElement('div');
+    container.classList.add('tag-container');
+    container.appendChild(createTag(0, o.name, info.title, name, name));
+    div.appendChild(document.createElement('hr'));
+    div.appendChild(container);
+  }
 
   if (o.spawns) {
     let container = document.createElement('div');
