--- a/index.html
+++ b/index.html
@@ -1083,7 +1083,7 @@ function popupOnClick(e) {
     span.setAttribute('tabindex', 0);
 
     span.textContent = title;
-    //span.title = tooltip;
+    span.title = tooltip;
     span.className = 'tag-title';
 
     if (action.startsWith('http')) {
@@ -1092,7 +1092,7 @@ function popupOnClick(e) {
     }
 
     span.setAttribute('action', action || name);
-    span.onclick = function(e) { copyToClipboard(  `${e.target.getAttribute('name')}`  ); console.log(tooltip); return false;  };
+    span.onclick = function(e) { copyToClipboard(  `${e.target.getAttribute('name')}`  ); return false;  };
 
     let colors = ['#eee', '#dde', '#ded', '#eed', '#ede'];
     if (color>0) {
@@ -1121,7 +1121,7 @@ function popupOnClick(e) {
 
           img.setAttribute('src', icon);
           img.style.left = e.clientX + 'px';
-          img.style.top = e.clientY + 25 + 'px';
+          img.style.top = e.clientY + 35 + 'px';
 
           document.body.appendChild(img);
 
@@ -1148,7 +1148,9 @@ function popupOnClick(e) {
   if (o.type=='ESpawnType::Item' && o.name) {
     let container = document.createElement('div');
     container.classList.add('tag-container');
-    container.appendChild(createTag(2, o.name, info.title, name, name));
+    let name = o.name;
+    let title = translate_item(o.name);
+    container.appendChild(createTag(2, name, title, title, name));
     div.appendChild(document.createElement('hr'));
     div.appendChild(container);
   }
@@ -1164,7 +1166,9 @@ function popupOnClick(e) {
       let color = Object.keys(groups).length;
       let name = data.name;
       let title = translate_item(name);
-      let tooltip = [title, name, settings.rank, data.generator, JSON.stringify(data.props), data.category].filter(e=>e).join(' ');
+
+      let tooltip = title;//[title, name, settings.rank, data.generator, JSON.stringify(data.props), data.category].filter(e=>e).join(' ');
+
       container.appendChild(createTag(color+1, name, title, tooltip, getWikiURL(title)));
     }
 
