--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ function popupOnClick(e) {
     span.setAttribute('tabindex', 0);
 
     span.textContent = title;
-    span.title = tooltip || action;
+    span.title = tooltip || name;
     span.className = 'tag-title';
 
     span.setAttribute('name', name);
