--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@ function popupOnClick(e) {
     span.setAttribute('tabindex', 0);
 
     span.textContent = title;
-    span.title = tooltip || name;
+    span.title = tooltip;
     span.className = 'tag-title';
 
     span.setAttribute('name', name);
@@ -1144,7 +1144,7 @@ function popupOnClick(e) {
     container.classList.add('tag-container');
     let name = o.name;
     let title = translate_item(o.name);
-    container.appendChild(createTag(2, name, title, title, name, o));
+    container.appendChild(createTag(2, name, title, `${title} (${name})`, name, o));
     div.appendChild(document.createElement('hr'));
     div.appendChild(container);
   }
@@ -1174,7 +1174,7 @@ function popupOnClick(e) {
     let container = document.createElement('div');
     container.classList.add('tag-container');
     for (const name of o.references) {
-      container.appendChild(createTag(5, name, name, '', `XStartQuestNodeBySID ${name}`));
+      container.appendChild(createTag(5, name, name, name, `XStartQuestNodeBySID ${name}`));
     }
     div.appendChild(document.createElement('hr'));
     div.appendChild(container);
